# training-rust

./: README.md  closures-example.code-workspace  demo-test-controlling.code-workspace  demo-test-organization.code-workspace  demo-test.code-workspace  hello-rust.code-workspace  minigrep.code-workspace
closures-example/: .gitignore  Cargo.toml
closures-example/src/: error_closure.rs  expensive_cacher_closure.rs  expensive_closure.rs  plain.rs  using_fn.rs
demo-test/: Cargo.toml
demo-test-controlling/: Cargo.toml
demo-test-controlling/src/: lib.rs
demo-test-organization/: Cargo.toml
demo-test-organization/tests/: integration_test.rs
demo-test/src/: lib.rs
hello-rust/: Cargo.toml
hello-rust/src/: demo.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
pcm/: .gitignore  Cargo.toml  pcm.code-workspace
pcm/src/: lib.rs  main.rs
